# rust-maud-htmx

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
static/css/: index.css
