[package]
name = "dobble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum_static = "1.2.3"
maud = { version = "0.25.0", features = ["axum"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["serde", "serde_json", "env-filter"] }
